--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,10 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -69,10 +72,16 @@
             tools:ignore="LockedOrientationActivity">
         </activity>
 
+        <activity android:name="com.application.monsterjourney.Map"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
+        </activity>
+
         <service
             android:name=".ForeGroundService"
             android:enabled="true"
-            android:exported="true">
+            android:exported="false">
         </service>
 
         <meta-data
