--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,20 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
+    testOptions.unitTests.includeAndroidResources = true
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
+
+    sourceSets {
+        // Adds exported schema location as test app assets.
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
+        debug.assets.srcDirs += files("$projectDir/schemas".toString())
+    }
 
     defaultConfig {
         applicationId "com.application.monsterjourney"
@@ -11,6 +25,13 @@ android {
         versionCode 4
         versionName "1.0"
         multiDexEnabled true
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation":
+                                      "$projectDir/schemas".toString()]
+            }
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,10 +51,10 @@ android {
 }
 
 dependencies {
-    def billing_version = "3.0.1"
+    def billing_version = "3.0.2"
 
     implementation "com.android.billingclient:billing:$billing_version"
-    def room_version = "2.2.5"
+    def room_version = "2.2.6"
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
@@ -45,7 +66,10 @@ dependencies {
     implementation "androidx.room:room-guava:$room_version"
 
     // optional - Test helpers
+    testImplementation "androidx.room:room-testing:2.2.6"
     testImplementation "androidx.room:room-testing:$room_version"
+    testImplementation 'com.android.support.test:runner:1.0.2'
+    testImplementation 'org.robolectric:robolectric:4.2.1'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -55,7 +79,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
-    implementation 'com.google.android.gms:play-services-ads:19.5.0'
+    implementation 'com.google.android.gms:play-services-ads:19.7.0'
     implementation 'com.google.android.gms:play-services-nearby:17.0.0'
     implementation 'com.android.support:multidex:1.0.3'
 
