--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
         applicationId "com.application.monsterjourney"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 4
-        versionName "1.0"
+        versionCode 7
+        versionName "1.3"
         multiDexEnabled true
 
         javaCompileOptions {
@@ -82,5 +82,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:19.7.0'
     implementation 'com.google.android.gms:play-services-nearby:17.0.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.android.gms:play-services-ads-identifier'
+    implementation 'com.google.android.gms:play-services-base'
+    implementation 'com.appodeal.ads:sdk:2.8.1.+'
+    implementation 'com.google.android.gms:play-services-fitness:20.0.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'androidx.annotation:annotation:1.0.0'
+    implementation 'com.facebook.android:audience-network-sdk:6.+'
+//    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'com.google.android.exoplayer:exoplayer:2.10.5'
 
 }
